--- a/css/style.css
+++ b/css/style.css
@@ -2670,36 +2670,41 @@ a {
   z-index: 100;
   width: 100%;
 }
-.header.fixHeader {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 100%;
-  max-width: 500px;
-  height: 150px;
-  display: flex;
-  justify-content: flex-end;
-  transform: translateY(-100%);
-  transition: transform 300ms cubic-bezier(0.33, 1, 0.68, 1);
-}
-@media screen and (max-width: 768px) {
-  .header.fixHeader {
-    height: 120px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .header.fixHeader {
-    height: 90px;
-  }
-}
 .header.fixHeader .header__wrap .logo,
 .header.fixHeader .header__wrap .nav__list {
   display: none;
 }
+.header.fixHeader .header__wrap .nav__recruit {
+  position: fixed;
+  top: 32px;
+  right: 120px;
+  transform: translateY(-200%);
+  transition: transform 600ms cubic-bezier(0.33, 1, 0.68, 1);
+}
+@media screen and (max-width: 768px) {
+  .header.fixHeader .header__wrap .nav__recruit {
+    top: 28px;
+    right: 86px;
+  }
+}
 .header.fixHeader .header__wrap .d-btn {
   display: flex;
+  position: fixed;
+  top: 32px;
+  right: 32px;
+  transform: translateY(-200%);
+  transition: transform 600ms cubic-bezier(0.33, 1, 0.68, 1);
 }
-.header.fixHeader.js-active {
+@media screen and (max-width: 768px) {
+  .header.fixHeader .header__wrap .d-btn {
+    top: 28px;
+    right: 20px;
+  }
+}
+.header.fixHeader.js-active .nav__recruit {
+  transform: translateY(0);
+}
+.header.fixHeader.js-active .d-btn {
   transform: translateY(0);
 }
 .header__wrap {
