--- a/css/style.css
+++ b/css/style.css
@@ -7541,4 +7541,109 @@ a {
     background-color: #216cc4;
   }
 }
+
+/* ============================================
+// 事業所案内
+// ==========================================*/
+.lower-facility_l .facility {
+  padding-top: 80px;
+  padding-bottom: 120px;
+}
+.lower-facility_l .facility__list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.lower-facility_l .facility__list__item {
+  width: 30%;
+  margin-right: 5%;
+  position: relative;
+}
+.lower-facility_l .facility__list__item:nth-child(3n+3) {
+  margin-right: 0;
+}
+.lower-facility_l .facility__list__item .link {
+  display: block;
+  transition: transform 400ms cubic-bezier(0.33, 1, 0.68, 1) 0ms;
+}
+@media screen and (min-width: 769px) {
+  .lower-facility_l .facility__list__item .link:hover {
+    transform: translateY(-8px);
+  }
+  .lower-facility_l .facility__list__item .link:hover .link__wrap {
+    box-shadow: 0 16px 24px rgba(33, 108, 196, 0.1);
+  }
+}
+.lower-facility_l .facility__list__item .link__wrap {
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0 10px 24px rgba(33, 108, 196, 0.1);
+  overflow: hidden;
+  transition: box-shadow 400ms cubic-bezier(0.33, 1, 0.68, 1) 0ms;
+}
+.lower-facility_l .facility__list__item .num {
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: #fff;
+  background-color: #216cc4;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+.lower-facility_l .facility__list__item .img-holder {
+  transition: transform 400ms cubic-bezier(0.33, 1, 0.68, 1) 0ms;
+}
+.lower-facility_l .facility__list__item .img-holder .img {
+  position: relative;
+  z-index: 1;
+}
+.lower-facility_l .facility__list__item .img-holder .img:before {
+  content: "";
+  display: block;
+  padding-top: 70.5%;
+}
+.lower-facility_l .facility__list__item .img-holder .img img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.lower-facility_l .facility__list__item .img-holder .img img {
+  border-radius: 10px 10px 0 0;
+}
+.lower-facility_l .facility__list__item .txt-holder {
+  background-color: #fff;
+  border-radius: 0 0 10px 10px;
+  text-align: center;
+  padding: 18px;
+}
+.lower-facility_l .facility__list__item .txt-holder .name {
+  font-size: 2.6rem;
+  color: #1c9dd2;
+  margin-top: 8px;
+  position: relative;
+}
+.lower-facility_l .facility__list__item .txt-holder .name::before {
+  content: "";
+  display: inline-block;
+  background-image: url(../img/common/ico_arrow.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
 /*# sourceMappingURL=style.css.map */
