--- a/sass/layout/_information.scss
+++ b/sass/layout/_information.scss
@@ -476,9 +476,12 @@
         box-shadow: 0 16px 24px rgb(33 108 196 / 10%);
         padding: 40px 48px 56px 40px;
         border-radius: 10px;
-        margin-top: -160px;
+        margin-top: -210px;
         position: relative;
         z-index: 10;
+        @media screen and (min-width:768px) and (max-width:1024px) {
+          margin-top: -160px;
+        }
         @include mixins.mq-down(md) {
           margin-top: -90px;
           padding: 24px;
@@ -571,13 +574,13 @@
           &__ttl {
             width: 100%;
             margin-top: 8px;
-            font-size: 2rem;
+            font-size: 2.4rem;
             font-weight: 600;
             line-height: 1.6;
             transition: color 400ms variables.$bezier-easeOutCubic
               0ms;
             @include mixins.mq-down(md) {
-              font-size: 1.7rem;
+              font-size: 2rem;
             }
 
             .ttl {
@@ -702,9 +705,10 @@
           .link {
             color: variables.$primary-color;
             border-bottom: 1px solid variables.$primary-color;
-            padding: 0 28px 4px 4px;
+            padding: 0 4px 4px 4px;
             position: relative;
             transition: color 0.3s;
+            word-break: break-all;
 
             @include mixins.mq-up(md) {
               &:hover {
@@ -713,7 +717,7 @@
             }
 
             &.-internal {
-              &:before {
+              &:after {
                 content: '';
                 display: inline-block;
                 background-image: url(../img/common/ico_arrow_blue.png);
@@ -721,14 +725,11 @@
                 background-repeat: no-repeat;
                 width: 13px;
                 height: 13px;
-                position: absolute;
-                top: 50%;
-                right: 6px;
-                transform: translateY(-50%);
+                margin-left: 8px;
               }
             }
             &.-external {
-              &:before {
+              &:after {
                 content: '';
                 display: inline-block;
                 background-image: url(../img/common/ico_external_blue.png);
@@ -736,10 +737,7 @@
                 background-repeat: no-repeat;
                 width: 16px;
                 height: 11px;
-                position: absolute;
-                top: 50%;
-                right: 6px;
-                transform: translateY(-50%);
+                margin-left: 8px;
               }
             }
           }
