--- a/sass/layout/_facility.scss
+++ b/sass/layout/_facility.scss
@@ -11,21 +11,118 @@
   .facility {
     padding-top: 80px;
     padding-bottom: 120px;
+    @include mixins.mq-down(md) {
+      padding-top: 56px;
+      padding-bottom: 56px;
+    }
 
+    .bubble01 {
+      width: 180px;
+      position: absolute;
+      z-index: 1;
+      top: -120px;
+      right: 156px;
+      opacity: 0.4;
+      pointer-events: none;
+      @include mixins.animation(waveY-20 8000ms linear 0ms infinite);
+      @include mixins.mq-down(sm) {
+        width: 120px;
+        top: -80px;
+        right: 0;
+      }
+      .img-box {
+        padding-top: 100%;
+      }
+    }
+    &__inner {
+      position: relative;
+    }
     &__list {
       display: flex;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: stretch;
       flex-wrap: wrap;
+      position: relative;
+      z-index: 10;
+      @include mixins.mq-down(md) {
+        display: block;
+      }
 
       &__item {
         width: 30%;
         margin-right: 5%;
+        margin-top: 72px;
         position: relative;
-        
+        opacity: 0;
+        @include mixins.mq-up(md) {
+          &:first-child {
+            margin-top: 0;
+          }
+          &:nth-child(2) {
+            margin-top: 0;
+          }
+          &:nth-child(3) {
+            margin-top: 0;
+          }
+        }
+        @include mixins.mq-down(md) {
+          width: 90%;
+          margin: 0 auto;
+          margin-top: 48px;
 
+          &:first-child {
+            margin-top: 0;
+          }
+        }
+
+
+        &:nth-child(3n + 1) {
+          &.js-active {
+            @include mixins.mq-up(md) {
+              @include mixins.animation(
+                fadein-b-40 400ms variables.$bezier-easeOutSine 200ms
+              );
+            }
+            @include mixins.mq-down(md) {
+              @include mixins.animation(
+                fadein-b-40 400ms variables.$bezier-easeOutSine 0ms
+              );
+            }
+          }
+        }
+        &:nth-child(3n + 2) {
+          &.js-active {
+            @include mixins.mq-up(md) {
+              @include mixins.animation(
+                fadein-b-40 400ms variables.$bezier-easeOutSine 400ms
+              );
+            }
+            @include mixins.mq-down(md) {
+              @include mixins.animation(
+                fadein-b-40 400ms variables.$bezier-easeOutSine 0ms
+              );
+            }
+          }
+        }
+        &:nth-child(3n + 3) {
+          &.js-active {
+            @include mixins.mq-up(md) {
+              @include mixins.animation(
+                fadein-b-40 400ms variables.$bezier-easeOutSine 600ms
+              );
+            }
+            @include mixins.mq-down(md) {
+              @include mixins.animation(
+                fadein-b-40 400ms variables.$bezier-easeOutSine 0ms
+              );
+            }
+          }
+        }
         &:nth-child(3n+3) {
           margin-right: 0;
+          @include mixins.mq-down(md) {
+            margin-right: auto;
+          }
         }
 
         .link {
@@ -82,17 +179,28 @@
         .txt-holder {
           background-color: #fff;
           border-radius: 0 0 10px 10px;
-          text-align: center;
           padding: 18px;
+          @include mixins.mq-up(md) {
+            padding: 16px;
+          }
 
           .lead {
-
+            padding: 0 10%;
+            text-align: center;
           }
           .name {
             font-size: 2.6rem;
             color: variables.$primary-color;
             margin-top: 8px;
             position: relative;
+            padding: 0 10%;
+            display: flex;
+            justify-content: center;
+            line-height: 1.6;
+
+            @include mixins.mq-up(md) {
+              font-size: 2.4rem;
+            }
             &::before {
               content: '';
               display: inline-block;
@@ -115,5 +223,285 @@
 
 // 詳細
 .lower-facility_d {
+  .l-main {
+    &__mv {
+      @include mixins.mq-up(xxl) {
+        padding-top: 170px;
+        padding-bottom: 130px;
+      }
+    }
 
+    .lmv-box {
+      &__sub {
+        font-size: 1.6rem;
+        color: #fff;
+      }
+      &__main {
+        font-size: 3.2rem;
+        color: #fff;
+        background-color: variables.$primary-color;
+        line-height: 1.6;
+        padding: 10px 56px;
+        border-radius: 100px;
+        font-weight: bold;
+        margin-top: 24px;
+      }
+    }
+  }
+  .facility {
+    padding-top: 80px;
+    padding-bottom: 120px;
+
+    &__inner {
+      position: relative;
+    }
+    &__head {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      .txt-holder {
+        flex: 1 1 auto;
+        .lead {
+          font-size: 2.8rem;
+          font-weight: bold;
+          color: variables.$primary-color;
+          line-height: 1.6;
+        }
+        .desc {
+          margin-top: 14px;
+          font-weight: 500;
+        }
+      }
+      .img-holder {
+        flex: 0 0 50%;
+        margin-left: 5%;
+
+        .img {
+          @include mixins.keepAspect(73.3%);
+          img {
+            border-radius: 10px;
+          }
+        }
+      }
+    }
+    &__body {
+      margin-top: 100px;
+    }
+
+    .bubble01 {
+      width: 180px;
+      position: absolute;
+      z-index: 1;
+      top: -120px;
+      right: 156px;
+      opacity: 0.4;
+      pointer-events: none;
+      @include mixins.animation(waveY-20 8000ms linear 0ms infinite);
+      @include mixins.mq-down(sm) {
+        width: 120px;
+        top: -80px;
+        right: 0;
+      }
+      .img-box {
+        padding-top: 100%;
+      }
+    }
+    .sec__support {
+      .support {
+        &__head {
+
+        }
+        &__body {
+          margin-top: 36px;
+        }
+
+        &__list {
+          border: 3px solid #cae8f6;
+          border-radius: 10px;
+          padding: 0 32px;
+          display: flex;
+          justify-content: flex-start;
+          align-items: stretch;
+          flex-wrap: wrap;
+
+          &__item {
+            width: 50%;
+            border-top: 3px solid #cae8f6;
+            padding-top: 40px;
+            padding-bottom: 40px;
+
+            &:first-child {
+              border: none;
+            }
+            &:nth-child(2) {
+              border: none;
+            }
+            &:nth-child(odd) {
+              padding-left: 1.75%;
+              padding-right: 5%;
+              position: relative;
+
+              &::before {
+                content: "";
+                background-image: linear-gradient(to bottom, #cae8f6, #cae8f6 12px, transparent 12px, transparent 18px);
+                background-size:  3px 18px;
+                background-position: right top;
+                background-repeat: repeat-y;
+                position: absolute;
+                top: 32px;
+                bottom: 32px;
+                left: 0;
+                right: 0;
+                pointer-events: none;
+              }
+            }
+            &:nth-child(even) {
+              padding-left: 5%;
+              padding-right: 1.75%;
+            }
+
+            .term-holder {
+              display: flex;
+              justify-content: flex-start;
+              align-items: flex-start;
+
+              .num {
+                flex: 0 0 55px;
+                margin-right: 16px;
+                font-family: variables.$font-Montserrat;
+                font-size: 2.4rem;
+                font-weight: bold;
+                color: #fff;
+                background-color: variables.$primary-dark;
+                width: 55px;
+                height: 55px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 50%;
+              }
+              .term {
+                flex: 1 1 auto;
+                font-size: 2rem;
+                margin-top: 11px;
+                line-height: 1.6;
+              }
+            }
+            .desc-holder {
+              margin-top: 24px;
+              .desc {
+                font-weight: 500;
+              }
+            }
+          }
+        }
+      }
+    }
+    .sec__outline {
+      margin-top: 100px;
+
+      .outline {
+        &__head {
+
+        }
+        &__body {
+          margin-top: 44px;
+          display: flex;
+          justify-content: flex-start;
+          align-items: stretch;
+
+          .list-holder {
+            flex: 0 0 65%;
+            margin-right: 3%;
+            border: 3px solid #cae8f6;
+            border-radius: 10px 0 0 10px;
+
+            .list {
+              display: flex;
+              justify-content: flex-start;
+              align-items: stretch;
+              font-weight: 500;
+              border-bottom: 3px solid #cae8f6;
+
+              &:first-child {
+                .term {
+                  border-radius: 5px 0 0 0;
+                }
+              }
+              &:last-child {
+                border: none;
+                .term {
+                  border-radius: 0 0 0 5px;
+                }
+              }
+
+
+              .term {
+                flex: 0 0 26%;
+                background-color: #dff1fa;
+                font-size: 1.6rem;
+                line-height: 1.6;
+                padding: 26px;
+                padding-left: 5%;
+              }
+              .description {
+                padding: 26px;
+                .gMap_link {
+                  position: relative;
+                  font-weight: bold;
+                  &:before {
+                  content: "";
+                  display: inline-block;
+                      position: relative;
+                      top: 0.17em;
+                      margin-right: .3em;
+                  width: 0.77em;
+                  height: 1em;
+                  background: url("../img/kyujin/ico_custom_location_black.png") no-repeat center center / contain;
+                  }
+                  color: variables.$primary-color;
+                  @include mixins.mq-up(md) {
+                    transition: color 300ms variables.$bezier-easeOutCubic;
+                    &:hover {
+                      color: darken(variables.$primary-color, 10);
+                    }
+                  }
+                  &:before {
+                    background: url(../img/kyujin/ico_custom_location_color.png) no-repeat
+                      center center/contain;
+                  }
+                }
+              }
+            }
+          }
+          .map-holder {
+            flex: 0 0 32%;
+            border: 3px solid #cae8f6;
+            border-radius: 0 10px 10px 0;
+            position: relative;
+
+            iframe {
+              border-radius: 0 10px 10px 0;
+              position: absolute;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
+    .btn-box {
+      width: 240px;
+      height: 64px;
+      margin: 80px auto 0;
+      @include mixins.mq-down(md) {
+        margin-top: 40px;
+      }
+    }
+  }
 }
