--- a/sass/layout/_interview.scss
+++ b/sass/layout/_interview.scss
@@ -315,6 +315,8 @@
           color: #fff;
           text-align: center;
           line-height: 1.6;
+          max-width: 1100px;
+          margin: 0 auto;
 
           @include mixins.mq-down(md) {
             font-size: 2.4rem;
@@ -331,7 +333,7 @@
     &__head {
       .profile {
         position: relative;
-        z-index: 100;
+        z-index: 5;
         &:before {
           content: '';
           width: 204px;
@@ -630,6 +632,10 @@
             .txt {
               font-size: 1.8rem;
               padding: 60px 32px 40px 40px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              height: 100%;
               @include mixins.mq-down(md) {
                 font-size: 1.6rem;
                 padding: 36px 20px 32px;
