--- a/sass/layout/_facility.scss
+++ b/sass/layout/_facility.scss
@@ -235,6 +235,10 @@
       &__sub {
         font-size: 1.6rem;
         color: #fff;
+        @include mixins.mq-down(md) {
+          font-size: 1.4rem;
+          text-align: left;
+        }
       }
       &__main {
         font-size: 3.2rem;
@@ -245,12 +249,21 @@
         border-radius: 100px;
         font-weight: bold;
         margin-top: 24px;
+        @include mixins.mq-down(md) {
+          font-size: 2.4rem;
+          padding: 10px 40px;
+          margin-top: 12px;
+        }
       }
     }
   }
   .facility {
     padding-top: 80px;
     padding-bottom: 120px;
+    @include mixins.mq-down(md) {
+      padding-top: 32px;
+      padding-bottom: 56px;
+    }
 
     &__inner {
       position: relative;
@@ -259,6 +272,11 @@
       display: flex;
       justify-content: flex-start;
       align-items: flex-start;
+      position: relative;
+      z-index: 3;
+      @include mixins.mq-down(md) {
+        display: block;
+      }
 
       .txt-holder {
         flex: 1 1 auto;
@@ -267,18 +285,30 @@
           font-weight: bold;
           color: variables.$primary-color;
           line-height: 1.6;
+          @include mixins.mq-down(md) {
+            font-size: 2.2rem;
+          }
         }
         .desc {
           margin-top: 14px;
           font-weight: 500;
+          @include mixins.mq-down(md) {
+            margin-top: 16px;
+          }
         }
       }
       .img-holder {
         flex: 0 0 50%;
         margin-left: 5%;
+        @include mixins.mq-down(md) {
+          margin-left: 0;
+          margin-top: 16px;
+        }
 
         .img {
           @include mixins.keepAspect(73.3%);
+          max-width: 600px;
+          margin: 0 auto;
           img {
             border-radius: 10px;
           }
@@ -287,6 +317,9 @@
     }
     &__body {
       margin-top: 100px;
+      @include mixins.mq-down(md) {
+        margin-top: 56px;
+      }
     }
 
     .bubble01 {
@@ -314,6 +347,9 @@
         }
         &__body {
           margin-top: 36px;
+          @include mixins.mq-down(md) {
+            margin-top: 20px;
+          }
         }
 
         &__list {
@@ -324,23 +360,47 @@
           justify-content: flex-start;
           align-items: stretch;
           flex-wrap: wrap;
+          @include mixins.mq-down(md) {
+            display: block;
+            padding: 0 12px;
+          }
 
           &__item {
             width: 50%;
             border-top: 3px solid #cae8f6;
             padding-top: 40px;
             padding-bottom: 40px;
+            @include mixins.mq-down(md) {
+              width: 100%;
+              padding-top: 32px;
+              padding-bottom: 32px;
+            }
+
+            &.js-active {
+              .term-holder,
+              .desc-holder {
+                @include mixins.animation(
+                  fadein-opacity 600ms variables.$bezier-easeOutSine 200ms
+                );
+              }
+            }
 
             &:first-child {
               border: none;
             }
             &:nth-child(2) {
-              border: none;
+              @include mixins.mq-up(md) {
+                border: none;
+              }
             }
             &:nth-child(odd) {
               padding-left: 1.75%;
               padding-right: 5%;
               position: relative;
+              @include mixins.mq-down(md) {
+                padding-left: 3%;
+                padding-right: 3%;
+              }
 
               &::before {
                 content: "";
@@ -354,17 +414,36 @@
                 left: 0;
                 right: 0;
                 pointer-events: none;
+                @include mixins.mq-down(md) {
+                  content: none;
+                }
               }
             }
             &:nth-child(even) {
               padding-left: 5%;
               padding-right: 1.75%;
+
+              @include mixins.mq-down(md) {
+                padding-left: 3%;
+                padding-right: 3%;
+              }
+              @include mixins.mq-up(md) {
+                &.js-active {
+                  .term-holder,
+                  .desc-holder {
+                    @include mixins.animation(
+                      fadein-opacity 600ms variables.$bezier-easeOutSine 400ms
+                    );
+                  }
+                }
+              }
             }
 
             .term-holder {
               display: flex;
               justify-content: flex-start;
               align-items: flex-start;
+              opacity: 0;
 
               .num {
                 flex: 0 0 55px;
@@ -380,16 +459,31 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 50%;
+
+                @include mixins.mq-down(md) {
+                  flex: 0 0 48px;
+                  font-size: 2rem;
+                  width: 48px;
+                  height: 48px;
+                }
               }
               .term {
                 flex: 1 1 auto;
                 font-size: 2rem;
                 margin-top: 11px;
                 line-height: 1.6;
+                @include mixins.mq-down(md) {
+                  font-size: 1.8rem;
+                }
               }
             }
             .desc-holder {
               margin-top: 24px;
+              opacity: 0;
+              @include mixins.mq-down(md) {
+                margin-top: 16px;
+              }
+
               .desc {
                 font-weight: 500;
               }
@@ -400,6 +494,9 @@
     }
     .sec__outline {
       margin-top: 100px;
+      @include mixins.mq-down(md) {
+        margin-top: 56px;
+      }
 
       .outline {
         &__head {
@@ -410,12 +507,20 @@
           display: flex;
           justify-content: flex-start;
           align-items: stretch;
+          @include mixins.mq-down(md) {
+            margin-top: 20px;
+            display: block;
+          }
 
           .list-holder {
             flex: 0 0 65%;
             margin-right: 3%;
             border: 3px solid #cae8f6;
             border-radius: 10px 0 0 10px;
+            @include mixins.mq-down(md) {
+              border-radius: 10px 10px 0 0 ;
+              margin-right: 0;
+            }
 
             .list {
               display: flex;
@@ -423,6 +528,9 @@
               align-items: stretch;
               font-weight: 500;
               border-bottom: 3px solid #cae8f6;
+              @include mixins.mq-down(md) {
+                display: block;
+              }
 
               &:first-child {
                 .term {
@@ -444,9 +552,16 @@
                 line-height: 1.6;
                 padding: 26px;
                 padding-left: 5%;
+                @include mixins.mq-down(md) {
+                  padding: 16px;
+                }
               }
               .description {
                 padding: 26px;
+                @include mixins.mq-down(md) {
+                  padding: 20px;
+                  padding-left: 5%;
+                }
                 .gMap_link {
                   position: relative;
                   font-weight: bold;
@@ -480,6 +595,12 @@
             border: 3px solid #cae8f6;
             border-radius: 0 10px 10px 0;
             position: relative;
+            @include mixins.mq-down(md) {
+              border-radius: 0 0 10px 10px;
+              margin-top: 16px;
+              width: 100%;
+              height: 200px;
+            }
 
             iframe {
               border-radius: 0 10px 10px 0;
